--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     expose:
       - 5432
     env_file:
-      - .env-docker
+      - .env
     volumes:
       - athkeeper_data:/var/lib/postgresql/data
 
@@ -23,7 +23,7 @@ services:
     build:
       context: .
     env_file:
-      - .env-docker
+      - .env
     container_name: athkeeper_app
     command: sh -c "alembic upgrade head && cd src && uvicorn main:app --host=0.0.0.0 --port=8000"
     restart: always
@@ -38,7 +38,7 @@ services:
       context: .
     container_name: celery_app
     env_file:
-      - .env-docker
+      - .env
     command: sh -c "cd src && celery -A tasks.tasks:celery worker --loglevel=INFO"
     restart: always
     depends_on:
@@ -49,7 +49,7 @@ services:
       context: .
     container_name: celery_beat
     env_file:
-      - .env-docker
+      - .env
     command: sh -c "cd src && celery -A tasks.tasks:celery beat"
     restart: always
     depends_on:
