--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=athkeeper
-DB_USER=athuser
-DB_PASS=ATHkeeper2023
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASS=admin
 
 POSTGRES_DB=athkeeper
 POSTGRES_USER=athuser
