--- a/.env-dev
+++ b/.env-dev
@@ -2,7 +2,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=admin
 
 DB_HOST_TEST=localhost
 DB_PORT_TEST=5432
