--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   db:
@@ -25,7 +25,7 @@ services:
     env_file:
       - .env
     container_name: athkeeper_app
-    command: sh -c "alembic upgrade head && cd src && uvicorn main:app --host=0.0.0.0 --port=8000"
+    command: sh -c "alembic upgrade 311247e40726 && cd src && uvicorn main:app --host=0.0.0.0 --port=8000"
     restart: always
     ports:
       - 8000:8000
@@ -56,5 +56,5 @@ services:
       - redis
       - celery
 
-volumes: 
+volumes:
   athkeeper_data:
