--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     env_file:
       - .env
     container_name: athkeeper_app
-    command: sh -c "alembic upgrade 311247e40726 && cd src && uvicorn main:app --host=0.0.0.0 --port=8000"
+    command: sh -c "cd src && uvicorn main:app --host=0.0.0.0 --port=8000"
     restart: always
     ports:
       - 8000:8000
