--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASS=admin
+DB_NAME=athkeeper
+DB_USER=athuser
+DB_PASS=ATHkeeper2023
 
 POSTGRES_DB=athkeeper
 POSTGRES_USER=athuser
